Fixes issue #120 (Privacy and Legal Notices links may overlap with Login / Create New Character form on small screens)

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1189,7 +1189,7 @@ footer, header, hgroup, menu, nav, section {
         #bubbles {overflow:hidden;}
         
         .intro footer, .intro footer {display:block;}
-        footer {display:none;position:absolute;top:260px;left:0;z-index:9000;height:30px;width:100%;bottom:auto;}
+        footer {display:none;position:absolute;top:290px;left:0;z-index:9000;height:30px;width:100%;bottom:auto;}
         .returning footer, .returning footer {top:300px;}
         #close-legal {display:none;}
         
